<resources>
    <string name="app_name">HCI-OnFitApp</string>
    <string name="launcher">¡Dejanos a nosotros armarte la rutina! Empeza a entrenar hoy con rutinas pensadas para vos… y sin cargo</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="mostrar_contrasenia">Mostrar contraseña</string>
    <string name="pesas">PESAS</string>
    <string name="destacado">DESTACADO</string>
    <string name="enCasa">EN CASA</string>
    <string name="running">RUNNING</string>
    <string name="e_mail">E-mail</string>
    <string name="Finalizar">Finalizar</string>
    <string name="ModoVisualizacion">Elija su modo de ejecutar rutina</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ModoBreve">VISTA BREVE</string>
    <string name="ModoLargo">VISTA DETALLADA</string>
    <string name="entrada_en_calor">Entrada en calor</string>
    <string name="principal">Principal</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="elongacion">Elongación</string>
    <string name ="IngreseURL">Dirección URL de rutina</string>
    <string name="MisFavoritos">Mis Rutinas Favoritas</string>
    <string name="Confirmar_contrasenia"> Confirmar Contraseña</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="Register">Registrarse</string>
    <string name="ModifyAvatar">Avatar Link</string>
    <string name="cerrarSesion">CERRAR SESIÓN</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="EliminarCuenta">ELIMINAR CUENTA</string>
    <string name="checkMail">Revise su email e ingrese su codigo de verificación</string>
    <string name="reenviarMail">Si no le llego el codigo, vuelva a ingresar su email</string>
    <string name="codigo">Código</string>
    <string name="verificar">Verificar</string>
    <string name="reenviar">Reenvíar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar_link">Avatar Link</string>
    <string name="apellido">Apellido</string>
    <string name="descripci_n">DESCRIPCIÓN</string>
    <string name="elongaci_n">Elongación</string>
    <string name="ejercicios">EJERCICIOS</string>
    <string name="nombre_rutina">Nombre rutina</string>
    <string name="descripcion">Descripcion</string>
    <string name="excercise_description">Descripcion ejercicio</string>
    <string name="fin_rutina">¡Felicitaciones! Has terminado la rutina</string>
    <string name="volver_a_rutina">VOLVER A RUTINA</string>
    <string name="navBar_principal">Principal</string>
    <string name="navBar_Explorar">Explorar</string>
    <string name="navBar_Perfil">Perfil</string>
    <string name="checkBox_avatar">Borrar Imagen</string>
</resources>